--- a/static/styles.css
+++ b/static/styles.css
@@ -1,59 +1,109 @@
-/* styles.css */
+* {
+  color: white;
+  font-family: sans-serif;
+  transition: 0.2s ease-in-out;
+  user-select: none;
+}
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
+  background-color: #252a34;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  text-align: center;
+  padding-top: 5vh;
+}
+
+.turn-container {
+  width: 170px;
+  height: 80px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  position: relative;
+}
+
+.turn-container h2 {
+  margin: 0;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.pick_turn {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.turn-box {
+  border: 4px solid #000;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.turn-container .turn-box:nth-child(even) {
+  border-left: none;
+}
+
+.turn-background {
+  background-color: #ff2e63;
+}
+
+.bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 85px;
+  height: 40px;
+  /* background-color: #ff2e63; */
+  z-index: -1;
 }
 
 h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .board {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-gap: 5px;
-    background-color: #333;
-    padding: 10px;
-    border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  height: 275px;
+  width: 275px;
+  margin: 30px auto;
+  border: 2.5px solid #000;
 }
 
 .cell {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #666;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  cursor: pointer;
+  font-size: 4rem;
+  font-weight: 500;
+  border: 2.5px solid #000;
 }
 
 .cell:hover {
-    background-color: #444;
+  background-color: #ff2e63;
 }
 
 /* Style the reset button */
-#reset-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+#play-again {
+  background-color: #ff2e63;
+  padding: 10px 25px;
+  border: none;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-#reset-button:hover {
-    background-color: #0056b3;
+#play-again:hover {
+  padding: 10px 40px;
+  background-color: #08d9d6;
+  color: #000;
+}
+
+.winning-cells {
+  background-color: #08d9d6;
 }
