--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,31 @@
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
 </head>
 <body>
-    <h1>Tic-Tac-Toe</h1>
-    <div class="board">
-        <div class="cell" id="0"></div>
-        <div class="cell" id="1"></div>
-        <div class="cell" id="2"></div>
-        <div class="cell" id="3"></div>
-        <div class="cell" id="4"></div>
-        <div class="cell" id="5"></div>
-        <div class="cell" id="6"></div>
-        <div class="cell" id="7"></div>
-        <div class="cell" id="8"></div>
+    <div>
+        <div id="turn" class="turn-container">
+            <h2>Turn For</h2>
+            <div id="pick_player" class="pick_turn">
+                <div id="X_turn" class="turn-box turn-background">X</div>
+                <div id="O_turn" class="turn-box">O</div>
+            </div>
+        </div>
+        <!-- <div class="bg"></div> -->
+        <div class="board">
+            <div class="cell" id="0"></div>
+            <div class="cell" id="1"></div>
+            <div class="cell" id="2"></div>
+            <div class="cell" id="3"></div>
+            <div class="cell" id="4"></div>
+            <div class="cell" id="5"></div>
+            <div class="cell" id="6"></div>
+            <div class="cell" id="7"></div>
+            <div class="cell" id="8"></div>
+        </div>
+        <button id="play-again">Play Again</button>
     </div>
-    <button id="reset-button">Reset Game</button>
-    <script src="../static/script.js"></script>
+
+
+    <script type="module" src="../static/js/turnHandler.mjs"></script>
+    <script type="module" src="../static/js/main.mjs"></script>
 </body>
 </html>
