--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
 </head>
 <body>
+    <h1 id="titleMode">Easy Mode</h1>
     <div>
         <div id="turn" class="turn-container">
             <h2>Turn For</h2>
@@ -26,6 +27,12 @@
             <div class="cell" id="8"></div>
         </div>
         <button id="play-again">Play Again</button>
+    </div>
+
+    <div class="mode">
+        <button class="mode_button">Easy</button>
+        <button class="mode_button">Medium</button>
+        <button class="mode_button">Hard</button>
     </div>
 
 
